# Pachico

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_checkpoints.db-shm  agent_checkpoints.db-wal  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
App/: config.py
App/MyAgent/: graph.py
App/MyAgent/clients/: model.py  usda_api.py
App/MyAgent/utils/: chart_subgraph.py  checkpointer.py  data_review_subgraph.py  nodes.py  state.py  subgraph.py  tools.py
App/api/: __init__.py  routes.py
App/bot/: telegram_bot.py
App/cli/: cli.py
App/database/: __init__.py  models.py  session.py
App/service/: __init__.py  agent_service.py
App/web/: Dockerfile  package-lock.json  package.json
App/web/src/app/: globals.css  layout.tsx  page.tsx
App/web/src/components/: ChatArea.tsx  FallingEmojis.tsx  FileAttachment.tsx  InputBar.tsx  LoadingDots.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  Sidebar.tsx
App/web/src/hooks/: useChat.ts  useConversations.ts
App/web/src/lib/: api.ts  storage.ts  types.ts
alembic/: env.py
alembic/versions/: 4d501275ea7d_create_food_entries_table.py
